fix(login, registration): remove scrollbars

--- a/saln-client/src/routes/login/tags/style.css
+++ b/saln-client/src/routes/login/tags/style.css
@@ -21,7 +21,6 @@
     border-radius: 20px;
     background-color: #FFFFFF;
     border: 10px solid #0D9488;
-    overflow:scroll;
   }
   .enterEmail{
     border-radius: 20px;
